Added LentGood controller, service and mapper and refactored some classes to create a BaseGoodService to remove duplicate code.